Apps/UseUI/static/css/style.css
html,body {
    margin: 0;
}

a {
    text-decoration: none;
}

body {
    background: #ebebeb;
    font-family: arial, helvetica, sans-serif;
}

#fdbk_screen {
    height: 100% !important;
}

.header {
    border: 0;
    height: 45px;
    color: white;
    overflow: hidden;
    background: rgb(120,180,226); /* Old browsers */
background: -moz-linear-gradient(top, rgba(120,180,226,1) 0%, rgba(38,97,124,1) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(120,180,226,1)), color-stop(100%,rgba(38,97,124,1))); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top, rgba(120,180,226,1) 0%,rgba(38,97,124,1) 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top, rgba(120,180,226,1) 0%,rgba(38,97,124,1) 100%); /* Opera11.10+ */
background: -ms-linear-gradient(top, rgba(120,180,226,1) 0%,rgba(38,97,124,1) 100%); /* IE10+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#78b4e2', endColorstr='#26617c',GradientType=0 ); /* IE6-9 */
background: linear-gradient(top, rgba(120,180,226,1) 0%,rgba(38,97,124,1) 100%); /* W3C */
}



.header .headerTitle {
    line-height: 45px;
    margin-left: 100px;
    font-weight: bold;
    text-align: left;
    text-shadow: none;
    font-size: 1.2em;
}

.header .home-logo {
    float: left;
/*     clear: left; */
    margin-left: 25px;
    margin-top: 5px;
    cursor: pointer;
}

.header .divider {
margin-bottom:-12px;
/* border: 1px solid red; */
margin-left:3px;
}

.app-link {
    color: white;
    font-size: .7em;
    margin-left: 5px;
    line-height: 45px;
    padding: 4px 10px;
    border-radius: 3px;
    text-transform: uppercase;
}

.app-links {
    float: left;
    margin-left: 0px;
}

.app-link:hover {
/*     color: #67abdc; */
    background-color: #4d4d4d;

    box-shadow: inset 0 1px 3px 1px rgba(0,0,0,0.36);
    
}

.app-link.selected {
    background: #ebebeb;
    color: #444;
    -moz-box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.4);
    -webkit-box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.4);
    box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.4);
    
    
}

#nav-search input.search {
font-size: 16px;
color: #999;
padding: 4px;
padding-left:30px;
width:300px;
margin: 9px 0 0 15px;
-moz-border-radius: 4px;
-webkit-border-radius: 4px;
-khtml-border-radius: 4px;
border-radius: 4px;
background: rgb(255,255,255) url('../img/search_glass.png') left center no-repeat; /* Old browsers */
background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(229,229,229,1))) url('../img/search_glass.png') left center no-repeat; /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%) url('../img/search_glass.png') left center no-repeat; /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Opera11.10+ */
background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
background: linear-gradient(top, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%) url('../img/search_glass.png') left center no-repeat; /* W3C */
-moz-box-shadow:inset 2px 2px 5px #ccc;
box-shadow:inset 2px 2px 5px #ccc;
border: 1px solid #888;
}
#nav-search input.submit {
display:none;
}
#nav-search input.submit:hover,
#nav-search input.submit.hover {

}

#nav-search input.submit:active,
#nav-search input.submit.active {


}

.app-page .header {
    border-bottom: solid 1px #4d4d4d;
}

.block {
    width: 25%;
    margin: 0;
    padding: 0;
    border: 0;
    float: left;
}

#main {
    width: 655px;
    margin: 50px auto 0px auto;
}

#main .title {
    width: 505px;
    margin-left: 80px;
    font-size: 34px;
    font-weight: bold;
    color: #6e6e6e;
}

#main .body {
    margin-top: 20px;
    background: #5cbae1;
    border-radius: 8px;
    color: white;
    padding: 11px;
    overflow: hidden;
}

#main .body-header {
    width: 505px;
    margin-top: 10px;
    letter-spacing: 1px;
    font-size: 20.25px;
    margin-left: 90px;
    font-weight: bold;
    margin-bottom: 15px;
}

#main .box {
    cursor: pointer;
    background-color: white;
    color: #989898;
    padding: 10px 0px 5px 0px;
    margin: 0px 11px;
    border-radius: 12px;
    -moz-box-shadow: 0px 3px 1px rgba(0, 0, 0, .31);
    -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, .31);
    box-shadow: 0px 3px 1px rgba(0, 0, 0, .31);
}

#main .box.clicked {
    -moz-box-shadow: inset 0px 3px 1px rgba(0, 0, 0, .31);
    -webkit-box-shadow: inset 0px 3px 1px rgba(0, 0, 0, .31);
    box-shadow: inset 0px 3px 1px rgba(0, 0, 0, .31);
}

.imageBox.contacts {
    background-image: url('../img/contacts.png');
}

.imageBox.contacts:hover {
    background-image: url('../img/contacts_over.png');
}

.imageBox.search {
    background-image: url('../img/search.png');
}

.imageBox.search:hover {
    background-image: url('../img/search_over.png');
}

.imageBox.links {
    background-image: url('../img/links.png');
}

.imageBox.links:hover {
    background-image: url('../img/links_over.png');
}

.imageBox.photos {
    background-image: url('../img/photos.png');
}

.imageBox.photos:hover {
    background-image: url('../img/photo_over.png');
}

#preload {
    display: none;
}

#main .imageBox {
    height: 90px;
    background-position: 25px 0px;
    background-repeat: no-repeat;
}

#main .box.clicked .imageBox {
    margin-top: 2px;
    height: 88px;
}

#main .box.clicked p {
    margin-top: 7px;
    margin-bottom: 3px;
}

#main p {
    margin: 5px 2px;
    font-size: 12.25px;
    text-align: center;
}

#main .box p {
    font-weight: bold;
}

#main .undertext {
    font-size: 12.25px;
    margin: 10px 20px 10px 20px;
    letter-spacing: .5px;
}

.services-box-container {
    float: right;
    height: 45px;
    overflow: hidden;
}

.services-box {
    cursor: pointer;
    float: right;
    margin-right: 150px;
    background-color: #67abdc;
    margin-top: 27px;
    padding: 5px;
    font-size: .7em;
    border-radius: 5px;
}

#services {
    background-color: #313131;
    height: 0px;
    box-shadow: inset 0px 5px 5px black;
    overflow: hidden;
}

#choose-services {
    background-image: url('../img/arrow.png');
    width: 244px;
    height: 55px;
    margin-top: 30px;
    line-height: 46px;
    color: white;
    padding-left: 10px;
    font-weight: bold;
    float: left;
}

#service-selector {
    background-color: #535353;
    border-radius: 5px;
    float: left;
    margin-top: 15px;
    margin-left: 10px;
    padding: 0px 15px;
    height: 80px;
    box-shadow: 0px 8px 5px rgba(0, 0, 0, .1);
}

.service {
    width: 76px;
    float: left;
    margin-top: 13px;
}

.service.template {
    display: none;
}

.service .checkmark {
    position: relative;
    display: none;
    top: -61px;
    left: 43px;
}

.service .provider-icon {
    margin-left: 20px;
}

.service .spinner {
    position: relative;
    top: -35px;
    left: 0px;
}

.service .provider-name {
    margin-top: 4px;
    text-align: center;
    font-size: 11px;
    color: #bfbfbf;
    font-weight: bold;

}

.service .provider-link.disabled {
    cursor: auto;
    opacity: .5;
}

#service-closer {
    background-image: url('../img/uparrows.png');
    background-repeat: no-repeat;
    background-position: center;
    margin-top: 90px;
    float: right;
    height: 20px;
    width: 36px;
    background-color: #7b7b7b;
    cursor: pointer;
}

.gray {
    color: #555;
}

#appFrame {
    width: 100%;
    height: 100%;
}

#counters {
    position:absolute;
    right:20px;
    top:6px;
    font-size:70%;
}

.tooltip {
    display:none;
    background:transparent url(../img/white_arrow.png) no-repeat;
    font-size:80%;
    height:70px;
    width:195px;
    padding:12px;
    padding-top:55px;
    color:#000;
    text-align:center; 
}

